[project]
name = "sdvn_comfy_node"
description = "Update Apply Style"
version = "1.4.3"
license = {file = "LICENSE"}
dependencies = ["#If MacOs - Please install aria2 manually via brew", "aria2;sys_platform != 'darwin'", "openai", "gallery-dl", "google-generativeai", "googletrans-py"]

[project.urls]
Repository = "https://github.com/StableDiffusionVN/SDVN_Comfy_node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "sdvn-comfy-node"
DisplayName = "SDVN_Comfy_node"
Icon = "https://github.com/StableDiffusionVN/SDVN_Comfy_node/blob/main/preview/sdvn-logo.png"